Fix dropdown spacing

--- a/site/assets/styles/_dropdowns.scss
+++ b/site/assets/styles/_dropdowns.scss
@@ -44,16 +44,12 @@ a.dropdown-item:not(nav#TOC a.dropdown-item):hover::before {
 }
 
 .navbar .dropdown-item {
-  padding: .2rem .7rem;
+  padding: .2rem .7rem !important;
 }
 
 // Responsive styles
 @media (max-width: 768px) {
-  .dropdown-item {
-    padding: 0.5rem 1rem;
-    font-size: 0.9rem;
-  }
-  
+
   .navbar-nav .dropdown-menu {
     width: 100%;
     position: static;
